--- a/index.html
+++ b/index.html
@@ -9,139 +9,132 @@
 </head>
 <body>
   <header>
-    <div class="container">
+    <div class="container header-container">
       <div class="logo">
         <a href="#">
-          <img src="img/logo.png" alt="TecnoExpress">
+          <img src="img/logo.png" alt="TecnoExpress" class="logo-img">
         </a>
       </div>
-      <nav>
-        <ul>
-          <li><a href="#nosotros"><i class="fas fa-users"></i> Nosotros</a></li>
-          <li><a href="#servicios"><i class="fas fa-cogs"></i> Servicios</a></li>
-          <li><a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a></li>
+      <nav class="main-nav">
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#nosotros" class="nav-link"><i class="fas fa-users"></i> Nosotros</a></li>
+          <li class="nav-item"><a href="#servicios" class="nav-link"><i class="fas fa-cogs"></i> Servicios</a></li>
+          <li class="nav-item"><a href="#contacto" class="nav-link"><i class="fas fa-envelope"></i> Contacto</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h1>Innovación tecnológica a tu alcance</h1>
-      <p>Soluciones personalizadas para empresas y particulares</p>
-      <a href="#contacto" class="btn">Saber más</a>
-    </div>
-  </section>
+  <main>
+    <section class="hero">
+      <div class="hero-content">
+        <h1 class="hero-title">Innovación tecnológica a tu alcance</h1>
+        <p class="hero-text">Soluciones personalizadas para empresas y particulares</p>
+        <a href="#contacto" class="btn hero-btn">Saber más</a>
+      </div>
+    </section>
 
-  <section class="banner">
-    <div class="slider">
-      <img src="img/banner1.webp" alt="Ofertas especiales en tecnología">
-      <img src="img/banner2.webp" alt="Últimos dispositivos tecnológicos">
-    </div>
-  </section>
+    <section class="banner">
+      <div class="slider">
+        <img src="img/banner1.webp" alt="Ofertas especiales en tecnología" class="slide-img">
+        <img src="img/banner2.webp" alt="Últimos dispositivos tecnológicos" class="slide-img">
+      </div>
+    </section>
 
-  <section id="nosotros" class="content-section">
-    <div class="container">
-      <h2><i class="fas fa-building"></i> Nosotros</h2>
-      <div class="section-content">
-        <div class="text-content">
-          <p>Somos TecnoExpress, una empresa líder en soluciones tecnológicas con más de 10 años de experiencia en el mercado. Nuestro equipo de expertos está comprometido con brindar la mejor atención y soluciones a medida.</p>
-          <p>Nos especializamos en integrar tecnología de vanguardia con soluciones accesibles para todos los presupuestos, ayudando a nuestros clientes a alcanzar sus objetivos empresariales y personales.</p>
-        </div>
-        <div class="image-content">
-          <img src="img/equipo.jpg" alt="Nuestro equipo de trabajo">
+    <section id="nosotros" class="section about-section">
+      <div class="container">
+        <h2 class="section-title"><i class="fas fa-building"></i> Nosotros</h2>
+        <div class="about-content">
+          <div class="about-text">
+            <p class="about-paragraph">Somos TecnoExpress, una empresa líder en soluciones tecnológicas con más de 10 años de experiencia en el mercado.</p>
+            <p class="about-paragraph">Nos especializamos en integrar tecnología de vanguardia con soluciones accesibles para todos los presupuestos.</p>
+          </div>
+          <div class="about-image">
+            <img src="img/equipo.jpg" alt="Nuestro equipo de trabajo" class="team-img">
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="servicios" class="content-section alt-bg">
-    <div class="container">
-      <h2><i class="fas fa-laptop-code"></i> Nuestros Servicios</h2>
-      <div class="services-grid">
-        <div class="service-card">
-          <div class="service-icon">
-            <i class="fas fa-shopping-cart"></i>
+    <section id="servicios" class="section services-section">
+      <div class="container">
+        <h2 class="section-title"><i class="fas fa-laptop-code"></i> Nuestros Servicios</h2>
+        <div class="services-grid">
+          <div class="service-card">
+            <div class="service-icon">
+              <i class="fas fa-shopping-cart"></i>
+            </div>
+            <h3 class="service-title">Venta de Tecnología</h3>
+            <p class="service-description">Las mejores marcas y equipos al mejor precio del mercado con garantía extendida.</p>
           </div>
-          <h3>Venta de Tecnología</h3>
-          <p>Las mejores marcas y equipos al mejor precio del mercado con garantía extendida.</p>
-        </div>
-        <div class="service-card">
-          <div class="service-icon">
-            <i class="fas fa-tools"></i>
+          <div class="service-card">
+            <div class="service-icon">
+              <i class="fas fa-tools"></i>
+            </div>
+            <h3 class="service-title">Soporte Técnico</h3>
+            <p class="service-description">Asistencia especializada 24/7 para resolver cualquier problema con tus dispositivos.</p>
           </div>
-          <h3>Soporte Técnico</h3>
-          <p>Asistencia especializada 24/7 para resolver cualquier problema con tus dispositivos.</p>
-        </div>
-        <div class="service-card">
-          <div class="service-icon">
-            <i class="fas fa-user-tie"></i>
+          <div class="service-card">
+            <div class="service-icon">
+              <i class="fas fa-user-tie"></i>
+            </div>
+            <h3 class="service-title">Asesoría Personalizada</h3>
+            <p class="service-description">Soluciones a medida adaptadas a tus necesidades específicas y presupuesto.</p>
           </div>
-          <h3>Asesoría Personalizada</h3>
-          <p>Soluciones a medida adaptadas a tus necesidades específicas y presupuesto.</p>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="contacto" class="content-section">
-    <div class="container">
-      <h2><i class="fas fa-phone-alt"></i> Contacto</h2>
-      <div class="contact-container">
-        <div class="contact-info">
-          <h3>Información de contacto</h3>
-          <p><i class="fas fa-map-marker-alt"></i> Av. Tecnológica 123, Ciudad</p>
-          <p><i class="fas fa-phone"></i> (123) 456-7890</p>
-          <p><i class="fas fa-envelope"></i> info@tecnoexpress.com</p>
-          <div class="social-media">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+    <section id="contacto" class="section contact-section">
+      <div class="container">
+        <h2 class="section-title"><i class="fas fa-phone-alt"></i> Contacto</h2>
+        <div class="contact-wrapper">
+          <div class="contact-info">
+            <h3 class="contact-subtitle">Información de contacto</h3>
+            <p class="contact-detail"><i class="fas fa-map-marker-alt"></i> Av. Tecnológica 123, Ciudad</p>
+            <p class="contact-detail"><i class="fas fa-phone"></i> (123) 456-7890</p>
+            <p class="contact-detail"><i class="fas fa-envelope"></i> info@tecnoexpress.com</p>
+            <div class="social-media">
+              <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+              <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            </div>
           </div>
-        </div>
-        <form class="contact-form">
-          <div class="form-group">
-            <input type="text" placeholder="Nombre completo" required>
-          </div>
-          <div class="form-group">
-            <input type="email" placeholder="Correo electrónico" required>
-          </div>
-          <div class="form-group">
-            <textarea placeholder="Tu mensaje" required></textarea>
-          </div>
-          <button type="submit" class="btn">Enviar Mensaje</button>
-        </form>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    <div class="container">
-      <div class="footer-content">
-        <div class="footer-logo">
-          <img src="img/logo-footer.png" alt="TecnoExpress">
-          <p>Soluciones tecnológicas innovadoras para el mundo moderno.</p>
-        </div>
-        <div class="footer-links">
-          <h3>Enlaces rápidos</h3>
-          <ul>
-            <li><a href="#nosotros">Nosotros</a></li>
-            <li><a href="#servicios">Servicios</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-          </ul>
-        </div>
-        <div class="footer-newsletter">
-          <h3>Suscríbete</h3>
-          <p>Recibe nuestras últimas ofertas y noticias.</p>
-          <form>
-            <input type="email" placeholder="Tu correo electrónico">
-            <button type="submit" class="btn">Suscribir</button>
+          <form class="contact-form">
+            <div class="form-group">
+              <input type="text" placeholder="Nombre completo" class="form-input" required>
+            </div>
+            <div class="form-group">
+              <input type="email" placeholder="Correo electrónico" class="form-input" required>
+            </div>
+            <div class="form-group">
+              <textarea placeholder="Tu mensaje" class="form-textarea" required></textarea>
+            </div>
+            <button type="submit" class="btn form-btn">Enviar Mensaje</button>
           </form>
         </div>
       </div>
+    </section>
+  </main>
+
+  <footer class="main-footer">
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="img/logo-footer.png" alt="TecnoExpress" class="footer-logo-img">
+          <p class="footer-text">Soluciones tecnológicas innovadoras para el mundo moderno.</p>
+        </div>
+        <div class="footer-links">
+          <h3 class="footer-title">Enlaces rápidos</h3>
+          <ul class="footer-list">
+            <li class="footer-item"><a href="#nosotros" class="footer-link">Nosotros</a></li>
+            <li class="footer-item"><a href="#servicios" class="footer-link">Servicios</a></li>
+            <li class="footer-item"><a href="#contacto" class="footer-link">Contacto</a></li>
+          </ul>
+        </div>
+      </div>
       <div class="copyright">
-        <p>&copy; 2023 TecnoExpress. Todos los derechos reservados.</p>
+        <p class="copyright-text">&copy; 2023 TecnoExpress. Todos los derechos reservados.</p>
       </div>
     </div>
   </footer>
