--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
   </header>
 
   <section class="hero">
+    <!-- Video de fondo -->
+    <video autoplay muted loop playsinline class="hero-video">
+      <source src="img/hero.mp4" type="video/mp4">
+      <!-- Fallback para navegadores que no soportan video -->
+      <img src="img/hero-fallback.jpg" alt="Fondo tecnológico">
+    </video>
+    
     <div class="hero-content">
       <h1>Innovación tecnológica a tu alcance</h1>
       <p>Soluciones personalizadas para empresas y particulares</p>
