--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
   </header>
 
   <section class="hero">
-    <!-- Video de fondo -->
     <video autoplay muted loop playsinline class="hero-video">
       <source src="img/hero.mp4" type="video/mp4">
-      <!-- Fallback para navegadores que no soportan video -->
       <img src="img/hero-fallback.jpg" alt="Fondo tecnológico">
     </video>
     
@@ -40,16 +38,18 @@
     </div>
   </section>
 
-  <section class="banner">
-    <div class="slider">
-      <img src="img/banner1.webp" alt="Ofertas especiales en tecnología">
-      <img src="img/banner2.webp" alt="Últimos dispositivos tecnológicos">
+  <section class="banner-section">
+    <div class="banner-container">
+      <div class="slider">
+        <img src="img/banner1.webp" alt="Ofertas especiales" class="slider-img">
+        <img src="img/banner2.webp" alt="Últimos dispositivos" class="slider-img">
+      </div>
     </div>
   </section>
 
   <section id="nosotros" class="section">
     <div class="container">
-      <h2>Nosotros</h2>
+      <h2><i class="fas fa-building"></i> Nosotros</h2>
       <div class="about-content">
         <div class="about-text">
           <p>Somos TecnoExpress, una empresa líder en soluciones tecnológicas con más de 10 años de experiencia en el mercado. Nuestro equipo de expertos está comprometido con brindar la mejor atención y soluciones a medida.</p>
@@ -64,28 +64,28 @@
 
   <section id="servicios" class="section alt-bg">
     <div class="container">
-      <h2>Nuestros Servicios</h2>
+      <h2><i class="fas fa-laptop-code"></i> Nuestros Servicios</h2>
       <div class="services-grid">
         <div class="service-card">
           <div class="service-icon">
             <i class="fas fa-laptop"></i>
           </div>
           <h3>Venta de Tecnología</h3>
-          <p>Las mejores marcas y equipos al mejor precio del mercado.</p>
+          <p>Las mejores marcas y equipos al mejor precio del mercado con garantía extendida.</p>
         </div>
         <div class="service-card">
           <div class="service-icon">
             <i class="fas fa-tools"></i>
           </div>
           <h3>Soporte Técnico</h3>
-          <p>Asistencia especializada para resolver cualquier problema.</p>
+          <p>Asistencia especializada 24/7 para resolver cualquier problema con tus dispositivos.</p>
         </div>
         <div class="service-card">
           <div class="service-icon">
             <i class="fas fa-user-tie"></i>
           </div>
           <h3>Asesoría Personalizada</h3>
-          <p>Soluciones adaptadas a tus necesidades específicas.</p>
+          <p>Soluciones a medida adaptadas a tus necesidades específicas y presupuesto.</p>
         </div>
       </div>
     </div>
@@ -93,7 +93,7 @@
 
   <section id="contacto" class="section">
     <div class="container">
-      <h2>Contacto</h2>
+      <h2><i class="fas fa-phone-alt"></i> Contacto</h2>
       <div class="contact-content">
         <div class="contact-info">
           <h3>Información de contacto</h3>
@@ -126,11 +126,11 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="img/logo.png" alt="TecnoExpress">
-          <p>Soluciones tecnológicas innovadoras</p>
+          <img src="img/logo-footer.png" alt="TecnoExpress">
+          <p>Soluciones tecnológicas innovadoras para el mundo moderno.</p>
         </div>
         <div class="footer-links">
-          <h3>Enlaces</h3>
+          <h3>Enlaces rápidos</h3>
           <ul>
             <li><a href="#nosotros">Nosotros</a></li>
             <li><a href="#servicios">Servicios</a></li>
