--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="img/logo-footer.png" alt="TecnoExpress">
+          <img src="img/logo.png" alt="TecnoExpress">
           <p>Soluciones tecnológicas innovadoras para el mundo moderno.</p>
         </div>
         <div class="footer-links">
