--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <ul>
           <li><a href="#nosotros">Nosotros</a></li>
-          <li><a href="#servicios">Servicios</a></li>
+          <li><a href="#Productos">Productos</a></li>
           <li><a href="#contacto">Contacto</a></li>
         </ul>
       </nav>
@@ -56,15 +56,15 @@
         <div class="about-text">
           <p>Somos TecnoExpress, una empresa líder en soluciones tecnológicas con más de 10 años de experiencia en el mercado.</p>
           <p>Nos especializamos en integrar tecnología de vanguardia con soluciones accesibles para todos los presupuestos.</p>
-          <a href="#servicios" class="btn-outline">Ver servicios</a>
+          <a href="#Productos" class="btn-outline">Ver Productos</a>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="servicios" class="section alt-bg">
+  <section id="Productos" class="section alt-bg">
     <div class="container">
-      <h2><i class="fas fa-laptop-code"></i> Nuestros Servicios</h2>
+      <h2><i class="fas fa-laptop-code"></i> Nuestros Productos</h2>
       <div class="services-grid">
         <div class="service-card">
           <div class="service-icon">
