--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <header class="header">
     <div class="container header-container">
       <div class="logo">
-        <a href="#">
+        <a href="index.html">
           <img src="img/logo.png" alt="TecnoExpress">
         </a>
       </div>
       <nav>
         <ul>
           <li><a href="#nosotros">Nosotros</a></li>
-          <li><a href="#Productos">Productos</a></li>
+          <li><a href="productos.html">Productos</a></li> <!-- Enlace modificado -->
           <li><a href="#contacto">Contacto</a></li>
         </ul>
       </nav>
@@ -56,7 +56,7 @@
         <div class="about-text">
           <p>Somos TecnoExpress, una empresa líder en soluciones tecnológicas con más de 10 años de experiencia en el mercado.</p>
           <p>Nos especializamos en integrar tecnología de vanguardia con soluciones accesibles para todos los presupuestos.</p>
-          <a href="#Productos" class="btn-outline">Ver Productos</a>
+          <a href="productos.html" class="btn-outline">Ver Productos</a> <!-- Enlace modificado -->
         </div>
       </div>
     </div>
@@ -72,6 +72,7 @@
           </div>
           <h3>Venta de Tecnología</h3>
           <p>Las mejores marcas y equipos al mejor precio del mercado con garantía extendida.</p>
+          <a href="productos.html" class="btn-small">Ver catálogo</a> <!-- Enlace añadido -->
         </div>
         <div class="service-card">
           <div class="service-icon">
@@ -133,7 +134,7 @@
           <h3>Enlaces rápidos</h3>
           <ul>
             <li><a href="#nosotros">Nosotros</a></li>
-            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="productos.html">Productos</a></li> <!-- Enlace modificado -->
             <li><a href="#contacto">Contacto</a></li>
           </ul>
         </div>
