--- a/productos.html
+++ b/productos.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container header-container">
             <div class="logo">
-                <a href="index.html"><img src="logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
             </div>
             <nav>
                 <ul>
