--- a/productos.html
+++ b/productos.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Productos - TecnoExpress</title>
+  <!-- Estilos base compartidos -->
   <link rel="stylesheet" href="css/styles.css">
+  <!-- Estilos específicos de productos con prefijo único -->
   <link rel="stylesheet" href="css/productos.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <!-- Header consistente -->
+  <!-- Header consistente con index.html -->
   <header class="header">
     <div class="container header-container">
       <div class="logo">
@@ -33,14 +35,14 @@
     </div>
   </header>
 
-  <!-- Carrito lateral -->
+  <!-- Carrito lateral - Manteniendo consistencia -->
   <div class="cart-sidebar" id="cartSidebar">
     <div class="cart-header">
       <h3>Tu Carrito</h3>
       <button class="close-cart" id="closeCart">&times;</button>
     </div>
     <div class="cart-items" id="cartItems">
-      <!-- Productos del carrito aparecerán aquí -->
+      <!-- Los productos del carrito se añadirán aquí -->
     </div>
     <div class="cart-total">
       <p>Total: <span id="cartTotal">$0.00</span></p>
@@ -48,7 +50,7 @@
     </div>
   </div>
 
-  <!-- Contenido principal -->
+  <!-- Contenido principal con prefijo único -->
   <main class="productos-main">
     <div class="container">
       <div class="productos-header">
@@ -60,7 +62,7 @@
 
       <div class="productos-grid">
         <!-- Filtros -->
-        <aside class="filtros">
+        <aside class="productos-filtros">
           <div class="filtro-grupo">
             <h3>Categorías</h3>
             <div class="filtro-opcion">
@@ -90,7 +92,7 @@
         </aside>
 
         <!-- Lista de productos -->
-        <section class="lista-productos" id="productList">
+        <section class="productos-lista" id="productList">
           <!-- Ejemplo de producto (se cargarán dinámicamente) -->
           <article class="producto-card">
             <div class="producto-imagen">
@@ -104,15 +106,17 @@
                 <p><i class="fas fa-memory"></i> 8GB RAM</p>
                 <p><i class="fas fa-hdd"></i> 512GB SSD</p>
               </div>
-              <button class="btn add-to-cart">Añadir al Carrito</button>
+              <button class="btn-add-cart">Añadir al Carrito</button>
             </div>
           </article>
+          
+          <!-- Más productos... -->
         </section>
       </div>
     </div>
   </main>
 
-  <!-- Footer consistente -->
+  <!-- Footer consistente con index.html -->
   <footer class="footer">
     <div class="container">
       <div class="footer-content">
@@ -135,7 +139,7 @@
     </div>
   </footer>
 
-  <!-- Scripts -->
+  <!-- Scripts específicos de productos -->
   <script src="js/productos.js"></script>
 </body>
 </html>
