--- a/index.html
+++ b/index.html
@@ -91,7 +91,17 @@
       margin-bottom: 40px;
     }
 
-    .hero::before {
+    .hero-video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 0;
+    }
+
+    .hero::after {
       content: '';
       position: absolute;
       top: 0;
@@ -154,10 +164,6 @@
       height: 100%;
       opacity: 0;
       transition: opacity 1.5s ease-in-out;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #f8f8f8;
     }
 
     .slide.active {
@@ -567,7 +573,7 @@
     <div class="container header-container">
       <div class="logo">
         <a href="#">
-          <img src="https://via.placeholder.com/150x50/1a365d/ffffff?text=TecnoExpress" alt="TecnoExpress">
+          <img src="img/logo.png" alt="TecnoExpress">
         </a>
       </div>
       <nav>
@@ -581,6 +587,12 @@
   </header>
 
   <section class="hero">
+    <video autoplay muted loop playsinline class="hero-video">
+      <source src="img/hero.mp4" type="video/mp4">
+      <!-- Fallback para navegadores que no soportan video -->
+      <img src="img/hero-fallback.jpg" alt="Fondo tecnológico">
+    </video>
+    
     <div class="hero-content">
       <h1>Innovación tecnológica a tu alcance</h1>
       <p>Soluciones personalizadas para empresas y particulares</p>
@@ -594,10 +606,10 @@
     <div class="banner-column">
       <div class="slider-container">
         <div class="slide active">
-          <img src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Tecnología avanzada" class="slide-img">
+          <img src="img/banner1.webp" alt="Ofertas especiales en tecnología" class="slide-img">
         </div>
         <div class="slide">
-          <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Soporte técnico" class="slide-img">
+          <img src="img/banner2.webp" alt="Últimos dispositivos tecnológicos" class="slide-img">
         </div>
       </div>
     </div>
@@ -675,7 +687,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="https://via.placeholder.com/150x50/1a365d/ffffff?text=TecnoExpress" alt="TecnoExpress">
+          <img src="img/logo-footer.png" alt="TecnoExpress">
           <p>Soluciones tecnológicas innovadoras para el mundo moderno.</p>
         </div>
         <div class="footer-links">
