--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
       <nav>
         <ul>
           <li><a href="#nosotros"><i class="fas fa-users"></i> Nosotros</a></li>
-          <li><a href="#servicios"><i class="fas fa-cogs"></i> Servicios</a></li>
+          <li><a href="#Productos"><i class="fas fa-cogs"></i> Productos</a></li>
           <li><a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a></li>
         </ul>
       </nav>
@@ -619,13 +619,13 @@
       <h2><i class="fas fa-building"></i> Nosotros</h2>
       <p>Somos TecnoExpress, una empresa líder en soluciones tecnológicas con más de 10 años de experiencia en el mercado. Nuestro equipo de expertos está comprometido con brindar la mejor atención y soluciones a medida.</p>
       <p>Nos especializamos en integrar tecnología de vanguardia con soluciones accesibles para todos los presupuestos, ayudando a nuestros clientes a alcanzar sus objetivos empresariales y personales.</p>
-      <a href="#servicios" class="btn">Nuestros Servicios</a>
+      <a href="#Productos" class="btn">Nuestros Productos</a>
     </div>
   </section>
 
-  <section id="servicios" class="section alt-bg">
+  <section id="Productos" class="section alt-bg">
     <div class="container">
-      <h2><i class="fas fa-laptop-code"></i> Nuestros Servicios</h2>
+      <h2><i class="fas fa-laptop-code"></i> Nuestros Productos</h2>
       <div class="services-grid">
         <div class="service-card">
           <div class="service-icon">
@@ -687,14 +687,14 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="img/logo-footer.png" alt="TecnoExpress">
+          <img src="img/logo.png" alt="TecnoExpress">
           <p>Soluciones tecnológicas innovadoras para el mundo moderno.</p>
         </div>
         <div class="footer-links">
           <h3>Enlaces rápidos</h3>
           <ul>
             <li><a href="#nosotros">Nosotros</a></li>
-            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#Productos">Productos</a></li>
             <li><a href="#contacto">Contacto</a></li>
           </ul>
         </div>
