--- a/productos.html
+++ b/productos.html
@@ -117,26 +117,14 @@
                             <span style="color: #999;">Imagen del producto</span>
                         </div>
                         <div class="producto-info" style="padding: 15px;">
-                            <div class="certificado" style="font-size: 0.8rem; color: #1a73e8; margin-bottom: 5px;">C€ certificado</div>
-                            <h3 style="font-size: 1rem; margin-bottom: 10px; color: #333;">Zapatillas ENTE SAFETY 2023 estilo personalizado blanco con logotipo...</h3>
-                            <div class="precio" style="font-size: 1.2rem; font-weight: bold; color: #d32f2f; margin-bottom: 10px;">$6.86</div>
+                            <h3 style="font-size: 1rem; margin-bottom: 10px; color: #333;">Impresora Térmica de Recibos E-pson TM-T20III de 80 mm</h3>
+                            <div class="precio" style="font-size: 1.2rem; font-weight: bold; color: #d32f2f; margin-bottom: 10px;">$150.00</div>
                             <div class="detalles" style="font-size: 0.8rem; color: #555; margin-bottom: 10px;">
-                                <p>Orden min: 10 pares</p>
                                 <p>Entrega est. para jul/25</p>
                             </div>
                             <div class="proveedor" style="font-size: 0.9rem; color: #1a73e8; margin-bottom: 10px;">Qingdao Eternity Safety Co., Ltd.</div>
                             <div class="verified" style="display: flex; align-items: center; gap: 5px; color: #1a73e8; font-size: 0.8rem; margin-bottom: 10px;">
-                                <span>Verified</span>
-                                <span>▼</span>
-                                <span>▼</span>
-                            </div>
-                            <div class="rating" style="font-size: 0.8rem; color: #555;">
-                                <span>5 años</span>
-                                <span>CN: 4.7</span>
-                                <span>15.0 (7 Opiniones) ▼</span>
-                            </div>
-                        </div>
-                    </div>
+
                     
                     <!-- Producto 2 -->
                     <div class="producto-card" style="background: white; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 10px rgba(0,0,0,0.1); transition: transform 0.3s ease;">
