--- a/productos.html
+++ b/productos.html
@@ -121,6 +121,20 @@
                             <div class="precio" style="font-size: 1.2rem; font-weight: bold; color: #d32f2f; margin-bottom: 10px;">$150.00</div>
                             <div class="detalles" style="font-size: 0.8rem; color: #555; margin-bottom: 10px;">
                                 <p>Entrega est. para jul/25</p>
+                             </div>
+                            <div class="proveedor" style="font-size: 0.9rem; color: #1a73e8; margin-bottom: 10px;">Qingdao Eternity Safety Co., Ltd.</div>
+                            <div class="verified" style="display: flex; align-items: center; gap: 5px; color: #1a73e8; font-size: 0.8rem; margin-bottom: 10px;">
+                                <span>Verified</span>
+                                <span>▼</span>
+                                <span>▼</span>
+                            </div>
+                            <div class="rating" style="font-size: 0.8rem; color: #555;">
+                                <span>5 años</span>
+                                <span>CN: 4.7</span>
+                                <span>15.0 (7 Opiniones) ▼</span>
+                            </div>
+                        </div>
+                    </div>
                             </div>
                             <div class="proveedor" style="font-size: 0.9rem; color: #1a73e8; margin-bottom: 10px;">Qingdao Eternity Safety Co., Ltd.</div>
                             <div class="verified" style="display: flex; align-items: center; gap: 5px; color: #1a73e8; font-size: 0.8rem; margin-bottom: 10px;">
