--- a/productos.html
+++ b/productos.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="container header-container">
             <div class="logo">
-                <a href="index.html"><img src="logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
             </div>
             <nav>
                 <ul>
@@ -224,7 +224,7 @@
     <footer>
         <div class="container footer-content">
             <div class="footer-logo">
-                <img src="logo.png" alt="Logo">
+                <img src="img/logo.png" alt="Logo">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
             <div class="footer-links">
