--- a/productos.html
+++ b/productos.html
@@ -289,11 +289,11 @@
                         <div class="producto-imagen">
                             <div class="producto-imagen-container" id="carrusel2">
                                 <!-- Imagen 1 del producto 2 -->
-                                <img src="IMAGENES/PRODUCTO2-1.jpg" alt="Zapatillas deportivas vista frontal" class="producto-img active">
+                                <img src="img/impresoramodelo1.webp" alt="Zapatillas deportivas vista frontal" class="producto-img active">
                                 <!-- Imagen 2 del producto 2 -->
-                                <img src="IMAGENES/PRODUCTO2-2.jpg" alt="Zapatillas deportivas vista lateral" class="producto-img">
+                                <img src="img/impresoramodelo2.webp" alt="Zapatillas deportivas vista lateral" class="producto-img">
                                 <!-- Imagen 3 del producto 2 -->
-                                <img src="IMAGENES/PRODUCTO2-3.jpg" alt="Zapatillas deportivas detalle" class="producto-img">
+                                <img src="img/impresoramodelo3.webp" alt="Zapatillas deportivas detalle" class="producto-img">
                                 
                                 <!-- Controles del carrusel -->
                                 <button class="carrusel-control prev" onclick="moveSlide('carrusel2', -1)">&#10094;</button>
@@ -334,11 +334,11 @@
                         <div class="producto-imagen">
                             <div class="producto-imagen-container" id="carrusel3">
                                 <!-- Imagen 1 del producto 3 -->
-                                <img src="IMAGENES/PRODUCTO3-1.jpg" alt="Sandalias planas vista frontal" class="producto-img active">
+                                <img src="img/impresoraotromodelo1.webp" alt="Sandalias planas vista frontal" class="producto-img active">
                                 <!-- Imagen 2 del producto 3 -->
-                                <img src="IMAGENES/PRODUCTO3-2.jpg" alt="Sandalias planas vista lateral" class="producto-img">
+                                <img src="img/impresoraotromodelo2.webp" alt="Sandalias planas vista lateral" class="producto-img">
                                 <!-- Imagen 3 del producto 3 -->
-                                <img src="IMAGENES/PRODUCTO3-3.jpg" alt="Sandalias planas detalle" class="producto-img">
+                                <img src="img/impresoraotromodelo3.webp" alt="Sandalias planas detalle" class="producto-img">
                                 
                                 <!-- Controles del carrusel -->
                                 <button class="carrusel-control prev" onclick="moveSlide('carrusel3', -1)">&#10094;</button>
