--- a/productos.html
+++ b/productos.html
@@ -133,13 +133,12 @@
     <header class="header">
         <div class="container header-container">
             <div class="logo">
-                <a href="index.html"><img src="logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="productos.html">Productos</a></li>
-                    <li><a href="#">Proveedores</a></li>
                     <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>
@@ -422,7 +421,7 @@
     <footer>
         <div class="container footer-content">
             <div class="footer-logo">
-                <img src="logo.png" alt="Logo">
+                <img src="img/logo.png" alt="Logo">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
             <div class="footer-links">
