--- a/productos.html
+++ b/productos.html
@@ -161,7 +161,10 @@
             <!-- Filtros -->
             <aside class="filtros">
                 <h3 style="margin-bottom: 20px; font-size: 1.2rem;">Filtros</h3
-                
+                  <div class="filtro-group">
+                    <h4 style="margin-bottom: 10px; font-weight: bold;">Trade Asurances</h4>
+                    <p style="font-size: 0.9rem; color: #555;">Protege tus pedidos en Alibaba.com</p>
+                </div>                
                 <div class="filtro-group">
                     <h4 style="margin-bottom: 10px; font-weight: bold;">Características del proveedor</h4>
                     <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 8px;">
