--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
       <nav>
         <ul>
           <li><a href="#nosotros"><i class="fas fa-users"></i> Nosotros</a></li>
-          <li><a href="Productos.html"><i class="fas fa-cogs"></i> Productos</a></li>
+          <li><a href="productos.html"><i class="fas fa-cogs"></i> Productos</a></li>
           <li><a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a></li>
         </ul>
       </nav>
