--- a/productos.html
+++ b/productos.html
@@ -5,34 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impresoras Térmicas - Productos</title>
     <link rel="stylesheet" href="css/styles.css">
+    <!-- Iconos (FontAwesome) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js"></script>
 </head>
 <body>
-    <header class="header">
-        <div class="container">
+    <!-- Header -->
+    <header>
+        <div class="container header-container">
             <div class="logo">
                 <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="productos.html" class="active">Productos</a></li>
+                    <li><a href="index.html"><i class="fas fa-home"></i> Inicio</a></li>
+                    <li><a href="productos.html" class="active"><i class="fas fa-print"></i> Productos</a></li>
+                    <li><a href="#"><i class="fas fa-envelope"></i> Contacto</a></li>
                 </ul>
             </nav>
-            <div class="cart-icon" id="cartIcon">🛒 <span id="cartCounter">0</span></div>
+            <div class="cart-icon" id="cartIcon">
+                <i class="fas fa-shopping-cart"></i>
+                <span id="cartCounter">0</span>
+            </div>
         </div>
     </header>
 
+    <!-- Contenido Principal -->
     <main class="container">
-        <h1>Catálogo de Impresoras</h1>
+        <h1><i class="fas fa-print"></i> Nuestras Impresoras</h1>
         
         <div class="productos-grid">
             <!-- Producto 1 -->
             <div class="producto-card">
                 <div class="producto-imagen">
-                    <img src="img/impresora1.webp" alt="Impresora Térmica">
+                    <img src="img/impresora1.webp" alt="Impresora Térmica EPSON TM-T20III">
                 </div>
                 <div class="producto-info">
                     <h3>Impresora Térmica EPSON TM-T20III</h3>
@@ -41,7 +49,24 @@
                             data-id="prod001"
                             data-name="Impresora EPSON TM-T20III"
                             data-price="150.00">
-                        Añadir al carrito
+                        <i class="fas fa-cart-plus"></i> Añadir al carrito
+                    </button>
+                </div>
+            </div>
+            
+            <!-- Producto 2 -->
+            <div class="producto-card">
+                <div class="producto-imagen">
+                    <img src="img/impresora2.webp" alt="Impresora POS Térmica EPSON TM-T88III">
+                </div>
+                <div class="producto-info">
+                    <h3>Impresora POS Térmica EPSON TM-T88III</h3>
+                    <div class="precio">$80.00</div>
+                    <button class="add-to-cart" 
+                            data-id="prod002"
+                            data-name="Impresora EPSON TM-T88III"
+                            data-price="80.00">
+                        <i class="fas fa-cart-plus"></i> Añadir al carrito
                     </button>
                 </div>
             </div>
@@ -50,16 +75,22 @@
         </div>
     </main>
 
-    <!-- Carrito Modal (Oculto inicialmente) -->
+    <!-- Modal del Carrito -->
     <div id="cartModal" class="modal">
         <div class="modal-content">
             <span class="close-modal">&times;</span>
-            <h2>Tu Carrito</h2>
-            <div id="cartItems"></div>
+            <h2><i class="fas fa-shopping-cart"></i> Tu Carrito</h2>
+            <div id="cartItems">
+                <!-- Los productos del carrito aparecerán aquí dinámicamente -->
+                <div class="empty-cart">
+                    <i class="fas fa-shopping-cart"></i>
+                    <p>Tu carrito está vacío</p>
+                </div>
+            </div>
             <div class="cart-total">
                 Total: $<span id="cartTotal">0.00</span>
             </div>
-            <button class="checkout-btn">Proceder al Pago</button>
+            <button class="checkout-btn"><i class="fas fa-credit-card"></i> Proceder al Pago</button>
         </div>
     </div>
 
