--- a/public/productos.html
+++ b/public/productos.html
@@ -74,7 +74,70 @@
             <!-- Más productos... -->
         </div>
     </main>
-
+            <!-- Producto 3 -->
+            <div class="producto-card">
+                <div class="producto-imagen">
+                    <img src="img/impresora1.webp" alt="Impresora Térmica EPSON TM-T20III">
+                </div>
+                <div class="producto-info">
+                    <h3>Impresora Térmica EPSON TM-T20III</h3>
+                    <div class="precio">$150.00</div>
+                    <button class="add-to-cart" 
+                            data-id="prod001"
+                            data-name="Impresora EPSON TM-T20III"
+                            data-price="150.00">
+                        <i class="fas fa-cart-plus"></i> Añadir al carrito
+                    </button>
+                </div>
+            </div>
+                <!-- Producto 4 -->
+            <div class="producto-card">
+                <div class="producto-imagen">
+                    <img src="img/impresora1.webp" alt="Impresora Térmica EPSON TM-T20III">
+                </div>
+                <div class="producto-info">
+                    <h3>Impresora Térmica EPSON TM-T20III</h3>
+                    <div class="precio">$150.00</div>
+                    <button class="add-to-cart" 
+                            data-id="prod001"
+                            data-name="Impresora EPSON TM-T20III"
+                            data-price="150.00">
+                        <i class="fas fa-cart-plus"></i> Añadir al carrito
+                    </button>
+                </div>
+            </div>
+                <!-- Producto 5 -->
+            <div class="producto-card">
+                <div class="producto-imagen">
+                    <img src="img/impresora1.webp" alt="Impresora Térmica EPSON TM-T20III">
+                </div>
+                <div class="producto-info">
+                    <h3>Impresora Térmica EPSON TM-T20III</h3>
+                    <div class="precio">$150.00</div>
+                    <button class="add-to-cart" 
+                            data-id="prod001"
+                            data-name="Impresora EPSON TM-T20III"
+                            data-price="150.00">
+                        <i class="fas fa-cart-plus"></i> Añadir al carrito
+                    </button>
+                </div>
+            </div>
+                <!-- Producto 6 -->
+            <div class="producto-card">
+                <div class="producto-imagen">
+                    <img src="img/impresora1.webp" alt="Impresora Térmica EPSON TM-T20III">
+                </div>
+                <div class="producto-info">
+                    <h3>Impresora Térmica EPSON TM-T20III</h3>
+                    <div class="precio">$150.00</div>
+                    <button class="add-to-cart" 
+                            data-id="prod001"
+                            data-name="Impresora EPSON TM-T20III"
+                            data-price="150.00">
+                        <i class="fas fa-cart-plus"></i> Añadir al carrito
+                    </button>
+                </div>
+            </div>
     <!-- Modal del Carrito -->
     <div id="cartModal" class="modal">
         <div class="modal-content">
