--- a/public/pago.html
+++ b/public/pago.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <!-- Header (igual que en productos.html) -->
+    <!-- Header -->
     <header>
         <div class="container header-container">
             <div class="logo">
@@ -84,11 +84,12 @@
     </main>
 
     <!-- JavaScript -->
+    <script src="js/firebase-config.js"></script>
     <script src="js/app.js"></script>
     <script>
         // Cargar los items del carrito desde localStorage
         document.addEventListener('DOMContentLoaded', function() {
-            const cart = JSON.parse(localStorage.getItem('cart')) || [];
+            const cart = JSON.parse(localStorage.getItem('currentCart')) || [];
             const orderItems = document.getElementById('orderItems');
             const orderTotal = document.getElementById('orderTotal');
             const paymentTotal = document.getElementById('paymentTotal');
@@ -104,10 +105,10 @@
                     itemElement.className = 'order-item';
                     itemElement.innerHTML = `
                         <div class="item-name">${item.name}</div>
-                        <div class="item-price">$${item.price}</div>
+                        <div class="item-price">$${(item.price * item.quantity).toFixed(2)} (${item.quantity} x $${item.price.toFixed(2)})</div>
                     `;
                     orderItems.appendChild(itemElement);
-                    total += parseFloat(item.price);
+                    total += parseFloat(item.price) * item.quantity;
                 });
             }
             
