--- a/public/productos.html
+++ b/public/productos.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Productos - TecnoExpress</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
-    <div class="container">
+    <div class="container header-container">
       <div class="logo">
-        <a href="index.html"><img src="/img/logo.png" alt="TecnoExpress"></a>
+        <a href="index.html"><img src="img/logo.png" alt="TecnoExpress"></a>
       </div>
       <nav>
         <ul>
@@ -31,10 +31,9 @@
     <h1><i class="fas fa-print"></i> Nuestros Productos</h1>
     
     <div class="productos-grid">
-      <!-- Producto 1 -->
       <div class="producto-card">
         <div class="producto-imagen">
-          <img src="/img/impresora1.webp" alt="Impresora Térmica EPSON">
+          <img src="img/impresora1.webp" alt="Impresora Térmica EPSON">
         </div>
         <div class="producto-info">
           <h3>Impresora EPSON TM-T20III</h3>
@@ -48,10 +47,9 @@
         </div>
       </div>
       
-      <!-- Producto 2 -->
       <div class="producto-card">
         <div class="producto-imagen">
-          <img src="/img/impresora2.webp" alt="Impresora Térmica EPSON">
+          <img src="img/impresora2.webp" alt="Impresora Térmica EPSON">
         </div>
         <div class="producto-info">
           <h3>Impresora EPSON TM-T88III</h3>
@@ -90,7 +88,6 @@
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js"></script>
-  <script src="/js/firebase-config.js"></script>
-  <script src="/js/app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
