--- a/public/productos.html
+++ b/public/productos.html
@@ -85,9 +85,7 @@
     </div>
   </div>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js"></script>
-  <script src="js/app.js"></script>
+  <!-- Firebase y App -->
+  <script type="module" src="js/app.js"></script>
 </body>
 </html>
