--- a/public/productos.html
+++ b/public/productos.html
@@ -86,6 +86,26 @@
   </div>
 
   <!-- Firebase y App -->
+  <script type="module">
+    // Importaciones de Firebase
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore.js";
+    import { getAuth } from "https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js";
+    
+    // Configuración e inicialización
+    const firebaseConfig = {
+      apiKey: "AIzaSyCR-axayENUg4FFb4jj0uVW2BnfwQ5EiXY",
+      authDomain: "mitienda-c2609.firebaseapp.com",
+      projectId: "mitienda-c2609",
+      storageBucket: "mitienda-c2609.appspot.com",
+      messagingSenderId: "536746062790",
+      appId: "1:536746062790:web:6e545efbc8f037e36538c7"
+    };
+    
+    const app = initializeApp(firebaseConfig);
+    window.db = getFirestore(app);
+    window.auth = getAuth(app);
+  </script>
   <script type="module" src="js/app.js"></script>
 </body>
 </html>
