--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-aqui esta el original porque el que me estas dando es mas corto si se le esta agregando el firebase integreation <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
