--- a/public/productos.html
+++ b/public/productos.html
@@ -94,7 +94,7 @@
     
     // Configuración e inicialización
     const firebaseConfig = {
-      apiKey: "AIzaSyCR-axayENUg4FFb4jj0uVW2BnfwQ5EiXY",
+      apiKey: "",
       authDomain: "mitienda-c2609.firebaseapp.com",
       projectId: "mitienda-c2609",
       storageBucket: "mitienda-c2609.appspot.com",
