--- a/public/index.html
+++ b/public/index.html
@@ -739,5 +739,10 @@
       startSlider();
     });
   </script>
+    <!-- Firebase modular v9 -->
+  <script type="module" src="app.js"></script>
+</body>
+</html>
+
 </body>
 </html>
