--- a/public/index.html
+++ b/public/index.html
@@ -573,7 +573,7 @@
     <div class="container header-container">
       <div class="logo">
         <a href="#">
-          <img src="/public/img/logo.png" alt="TecnoExpress">
+          <img src="img/logo.png" alt="TecnoExpress">
         </a>
       </div>
       <nav>
