--- a/public/index.html
+++ b/public/index.html
@@ -584,6 +584,7 @@
         </ul>
       </nav>
     </div>
+   <link rel="stylesheet" href="/css/auth.css">
   </header>
 
   <section class="hero">
@@ -741,6 +742,12 @@
   </script>
     <!-- Firebase modular v9 -->
   <script type="module" src="app.js"></script>
+    <div id="auth-modals-container">
+    <!-- Se llenará dinámicamente -->
+  </div>
+
+  <!-- Scripts al final del body -->
+  <script type="module" src="/js/main.js"></script>
 </body>
 </html>
 
