--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/auth.css">
   <style>
     /* Todos tus estilos CSS actuales (se mantienen igual) */
-    /* ... */
+  <link rel="stylesheet" href="/css/styles.css">
   </style>
 </head>
 <body>
