--- a/public/index.html
+++ b/public/index.html
@@ -731,6 +731,7 @@
         <button type="submit">Ingresar</button>
         <div class="form-footer">
           ¿No tienes cuenta? <a href="#" id="switch-to-signup">Regístrate aquí</a>
+          <li><a href="registro.html"><i class="fas fa-cogs"></i> Regístrate aquí</a></li>
         </div>
       </form>
     </div>
