--- a/public/index.html
+++ b/public/index.html
@@ -730,8 +730,7 @@
         </div>
         <button type="submit">Ingresar</button>
         <div class="form-footer">
-          ¿No tienes cuenta? <a href="#" id="switch-to-signup">Regístrate aquí</a>
-          <li><a href="registro.html"><i class="fas fa-cogs"></i> Regístrate aquí</a></li>
+          ¿No tienes cuenta? <a href="#" id="switch-to-signup"><li><a href="registro.html"><</i> Regístrate aquí</a></li>
         </div>
       </form>
     </div>
