--- a/public/configuraciondeusuario.html
+++ b/public/configuraciondeusuario.html
@@ -386,13 +386,13 @@
     <script>
         // Configuración de Firebase (usa la misma que en registro.html)
         const firebaseConfig = {
-            apiKey: "TU_API_KEY",
-            authDomain: "TU_PROYECTO.firebaseapp.com",
-            databaseURL: "https://TU_PROYECTO.firebaseio.com",
-            projectId: "TU_PROYECTO",
-            storageBucket: "TU_PROYECTO.appspot.com",
-            messagingSenderId: "TU_SENDER_ID",
-            appId: "TU_APP_ID"
+          apiKey: "{{FIREBASE_API_KEY}}",
+          authDomain: "{{FIREBASE_AUTH_DOMAIN}}",
+          databaseURL: "{{FIREBASE_DATABASE_URL}}",  // ¡Nuevo campo añadido!
+          projectId: "{{FIREBASE_PROJECT_ID}}",
+          storageBucket: "{{FIREBASE_STORAGE_BUCKET}}",
+          messagingSenderId: "{{FIREBASE_MESSAGING_SENDER_ID}}",
+          appId: "{{FIREBASE_APP_ID}}"
         };
 
         // Inicializa Firebase
